parte final
se agrega el dashboard y perfil de control de usuarios