@@ -1,18 +1,30 @@
 package com.teamportal.user.service;
 
+import com.teamportal.exception.BusinessRuleException;
+import com.teamportal.exception.ResourceNotFoundException;
+import com.teamportal.security.AuthenticatedUser;
+import com.teamportal.user.dto.PasswordChangeRequest;
 import com.teamportal.user.dto.UserCreateRequest;
 import com.teamportal.user.dto.UserResponse;
 import com.teamportal.user.dto.UserUpdateRequest;
 import com.teamportal.user.model.Role;
 import com.teamportal.user.model.User;
 import com.teamportal.user.repository.UserRepository;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
+/**
+ * Administración de usuarios (solo ADMIN).
+ * Los usuarios no se borran de la base de datos: "eliminar" los desactiva (active = false),
+ * así sus notas conservan el nombre del autor.
+ */
 @Service
+@Transactional
 public class UserService {
 
     private final UserRepository userRepository;
@@ -23,68 +35,102 @@ public class UserService {
         this.passwordEncoder = passwordEncoder;
     }
 
+    @Transactional(readOnly = true)
     public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
+        return userRepository.findAll(Sort.by("name")).stream()
                 .map(UserResponse::new)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public UserResponse getUser(Long id) {
+        return new UserResponse(findUser(id));
     }
 
     public UserResponse createUser(UserCreateRequest request) {
-        if (userRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("El email ya está en uso");
+        String email = normalizeEmail(request.getEmail());
+        if (userRepository.existsByEmail(email)) {
+            throw new BusinessRuleException("El email ya está en uso");
         }
 
         User user = new User();
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
+        user.setName(request.getName().trim());
+        user.setEmail(email);
         user.setPassword(passwordEncoder.encode(request.getPassword()));
         user.setRole(request.getRole());
         user.setActive(true);
 
-        User savedUser = userRepository.save(user);
-        return new UserResponse(savedUser);
+        return new UserResponse(userRepository.save(user));
     }
 
-    public UserResponse updateUser(Long id, UserUpdateRequest request) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+    public UserResponse updateUser(Long id, UserUpdateRequest request, AuthenticatedUser currentUser) {
+        User user = findUser(id);
+        String email = normalizeEmail(request.getEmail());
 
-        if (!user.getEmail().equals(request.getEmail()) && userRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("El email ya está en uso");
+        if (!user.getEmail().equals(email) && userRepository.existsByEmail(email)) {
+            throw new BusinessRuleException("El email ya está en uso");
         }
 
-        if (user.getRole() == Role.ADMIN && request.getRole() != Role.ADMIN && user.isActive()) {
-            validateLastAdmin();
+        if (request.getRole() != user.getRole()) {
+            if (user.getId().equals(currentUser.getId())) {
+                throw new BusinessRuleException("No puedes cambiar tu propio rol");
+            }
+            if (user.getRole() == Role.ADMIN && user.isActive()) {
+                validateNotLastActiveAdmin();
+            }
         }
 
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
+        user.setName(request.getName().trim());
+        user.setEmail(email);
         user.setRole(request.getRole());
-        
-        if (request.getPassword() != null && !request.getPassword().trim().isEmpty()) {
-            user.setPassword(passwordEncoder.encode(request.getPassword()));
-        }
 
-        User updatedUser = userRepository.save(user);
-        return new UserResponse(updatedUser);
+        return new UserResponse(userRepository.save(user));
     }
 
-    public void toggleActiveStatus(Long id, boolean active) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-
-        if (user.getRole() == Role.ADMIN && user.isActive() && !active) {
-            validateLastAdmin();
-        }
-
-        user.setActive(active);
+    public void changePassword(Long id, PasswordChangeRequest request) {
+        User user = findUser(id);
+        user.setPassword(passwordEncoder.encode(request.newPassword()));
         userRepository.save(user);
     }
 
-    private void validateLastAdmin() {
+    /** "Eliminar" un usuario: se desactiva y pierde el acceso, pero sus notas se conservan. */
+    public UserResponse deactivateUser(Long id, AuthenticatedUser currentUser) {
+        User user = findUser(id);
+
+        if (user.getId().equals(currentUser.getId())) {
+            throw new BusinessRuleException("No puedes desactivar tu propio usuario");
+        }
+        if (user.getRole() == Role.ADMIN && user.isActive()) {
+            validateNotLastActiveAdmin();
+        }
+
+        user.setActive(false);
+        return new UserResponse(userRepository.save(user));
+    }
+
+    public UserResponse activateUser(Long id) {
+        User user = findUser(id);
+        user.setActive(true);
+        return new UserResponse(userRepository.save(user));
+    }
+
+    public UserResponse setActiveStatus(Long id, boolean active, AuthenticatedUser currentUser) {
+        return active ? activateUser(id) : deactivateUser(id, currentUser);
+    }
+
+    private User findUser(Long id) {
+        return userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+    }
+
+    private void validateNotLastActiveAdmin() {
         long activeAdminsCount = userRepository.countByRoleAndActiveTrue(Role.ADMIN);
         if (activeAdminsCount <= 1) {
-            throw new RuntimeException("No se puede realizar la acción. Debe haber al menos un administrador activo.");
+            throw new BusinessRuleException("No se puede realizar la acción. Debe haber al menos un administrador activo.");
         }
+    }
+
+    private String normalizeEmail(String email) {
+        return email.trim().toLowerCase(Locale.ROOT);
     }
 }
